[package]
name = "cache-evictor"
version = "0.0.1"
authors = ["Tyler Neely <tylerneely@gmail.com>"]
description = "scan resistant concurrent cache eviction manager"
license = "GPL-3.0"
homepage = "https://github.com/komora-io/berghain"
repository = "https://github.com/komora-io/berghain"
keywords = ["cache", "lfu", "concurrent", "caching", "lock-free"]
categories = ["caching", "database-implementations", "concurrency", "data-structures", "algorithms"]
documentation = "https://docs.rs/berghain/"
readme = "README.md"
edition = "2021"

[features]
lock_free_delays = []

[profile.release]
debug = true
opt-level = 3
[dependencies]
ebr = "0.0.5"
