[package]
name = "cache-advisor"
version = "1.0.16"
authors = ["Tyler Neely <tylerneely@gmail.com>"]
description = "scan-resistant concurrent cache eviction manager"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/komora-io/cache-advisor"
repository = "https://github.com/komora-io/cache-advisor"
keywords = ["cache", "lfu", "concurrent", "caching", "lock-free"]
categories = ["caching", "database-implementations", "concurrency", "data-structures", "algorithms"]
documentation = "https://docs.rs/cache-advisor/"
readme = "README.md"
edition = "2021"

[profile.bench]
debug = true
opt-level = 3

[profile.release]
debug = true
opt-level = 3

[dependencies]
crossbeam-queue = "0.3.5"
